<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <Button
        android:text="@string/telepon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnpgl"
        android:onClick="panggil"
        />

    <Button
        android:text="@string/buka_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnpgl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:id="@+id/btnbuka"
        android:onClick="buka"
        />

    <Button
        android:id="@+id/btnemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnbuka"
        android:layout_marginTop="11dp"
        android:onClick="buka"
        android:text="@string/email"
        />

    <Button
        android:id="@+id/btnmaps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnemail"
        android:layout_marginTop="11dp"
        android:onClick="buka"
        android:text="@string/maps"
        />

    <Button
        android:text="@string/tentang_aplikasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnmaps"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25pt"
        android:id="@+id/btninfo"
        android:onClick="tentang"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uts_febby_f"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>